MM-60: Add price changing act functionality